After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682009 - DBus timeout for PAM conversation is too short
DBus timeout for PAM conversation is too short
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2012-08-16 14:27 UTC by Giovanni Campagna
Modified: 2012-08-16 18:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Session/SessionWorker: fix timeouts for DBus calls (1.93 KB, patch)
2012-08-16 17:43 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2012-08-16 14:27:46 UTC
I thought it was a PAM problem, but the recent error propagation changes in gdm exposed the reality: auth failures are really caused by DBus timeouts in the sync calls inside the conversation.

I should have noticed this earlier, as su has no timeout at all, but anyway, this makes it far easier to fix.
Comment 1 Giovanni Campagna 2012-08-16 17:43:55 UTC
Created attachment 221436 [details] [review]
Session/SessionWorker: fix timeouts for DBus calls

The default timeout for async DBus calls is 25 seconds (hardcoded in
GIO), which is not enough if user interaction is involved during
the call (such as during an InfoQuery). Instead, remove the timeout
entirely.
Comment 2 Giovanni Campagna 2012-08-16 18:54:50 UTC
Attachment 221436 [details] pushed as c34004e - Session/SessionWorker: fix timeouts for DBus calls