Session/SessionWorker: fix timeouts for DBus calls

The default timeout for async DBus calls is 25 seconds (hardcoded in
GIO), which is not enough if user interaction is involved during
the call (such as during an InfoQuery). Instead, remove the timeout
entirely.

https://bugzilla.gnome.org/show_bug.cgi?id=682009