daemon/gdm-session.c
@@ -1048,6 +1048,8 @@ register_worker (GdmDBusWorkerManager  *worker_manager_interface,
                                                                      NULL,
                                                                      GDM_WORKER_DBUS_PATH,
                                                                      NULL, NULL);
+        g_dbus_proxy_set_default_timeout (conversation->worker_proxy, G_MAXINT);
+
         g_signal_connect (conversation->worker_proxy,
                           "username-changed",
                           G_CALLBACK (worker_on_username_changed), conversation);
